src/contents/styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.hover-popup {
  animation: growDown 0.6s ease-in-out forwards;
}

.hide {
  animation: shrinkDown 0.1s ease-in forwards;
}

.none {
  display: none;
}

ul.summary li::marker {
  color: rgba(232, 166, 250, 0.50);
}

.word {
  animation: fadeUp 0.5s ease-out;
}

.inner-popup {
  animation: growToFit 0.6s ease-out forwards;
}

@keyframes fadeUp {
  0% {
    transform: translateY(5px);
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

@keyframes growDown {
  0% {
    transform: translateY(-10px);
    max-height: 0;
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    max-height: 700px;
    opacity: 1;
  }
}

@keyframes shrinkDown {
  0% {
    transform: translateY(0);
    max-height: 700px;
    opacity: 1;
  }
  100% {
    transform: translateY(-10px);
    max-height: 0;
    opacity: 0;
  }
}

@keyframes growToFit {
  0% {
    max-height: 0;
    opacity: 0;
  }
  100% {
    max-height: var(--maxHeight);
    opacity: 1;
  }
}

.image-contain { /* Used for logos, left align */
  padding: 0.5rem;
  object-fit: contain;
  align-self: start;
}

.image-cover { /* Used for backgrounds that we can cut off */
  width: 100%;
  object-fit: cover;
}

/* https://css-loaders.com/spinner/ */
.loader {
  width: 30px;
  margin: 6px auto;
  padding: 6px;
  aspect-ratio: 1;
  border-radius: 50%;
  background: #eeed;
  --_m: 
    conic-gradient(#0000 10%,#000),
    linear-gradient(#000 0 0) content-box;
  -webkit-mask: var(--_m);
          mask: var(--_m);
  -webkit-mask-composite: source-out;
          mask-composite: subtract;
  animation: l3 1.5s infinite linear;
}
@keyframes l3 {to{transform: rotate(1turn)}}

